# Frost

./: .gitmodules  Application.cpp  Application.h  CMakeLists.txt
ECS/: ComponentManager.h  Components.h  ECS.h  EntityManager.h  SystemManager.h  types.h
Platform/: ThreadPool.h
Rendering/Core/: Camera2D.h  DebugRenderer.h  SpriteBatchRenderer.cpp  SpriteBatchRenderer.h  TextRenderer.cpp  TextRenderer.h
Rendering/Essentials/: FontLoader.h  Shader.h
src/: Frost.h
src/Assets/: AssetLoader.h
src/Core/: Application.cpp  Application.h  Assert.h  EntryPoint.h  EventBus.h  Events.h  FrostMath.h  Logger.h
src/ECS/: ComponentPool.h  Entity.h  Registry.h  ScriptBase.h  ScriptComponent.h  ScriptSystem.h  SparseSet.h  View.h
src/Platform/Input/: Input.h
src/Platform/Window/: GLFWWindow.cpp  GLFWWindow.h  IWindow.h
src/Rendering/: BatchRenderer.cpp  BatchRenderer.h  Camera2D.cpp  Camera2D.h  DebugRenderer.cpp  DebugRenderer.h  Shader.h  ShaderLoader.cpp  ShaderLoader.h  TextRenderer.cpp  TextRenderer.h  Texture.h  TextureLoader.cpp  TextureLoader.h
src/Scene/: Scene.h  SceneManager.h
